app/assets/stylesheets/supporters.css.scss
// Place all the styles related to the supporters controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

.pricing {
  margin-top: 4em;
  margin-bottom: 4em;

  .col-centered {
    min-width:320px;
  }

  .plan {
    border-radius: 6px;
    list-style: none;
    padding: 0 0 20px;
    margin: 0 0 15px;
    background: #f5f5f5;
    text-align: center;
    li {
      padding: 10px 15px;
      color: #888;
      border-top: 1px solid #fff;
      -webkit-transition: 300ms;
      transition: 300ms;
    }
    li.plan-price {
      border-top: 0;
      font-size: 1.5em;
    }
    li.plan-name {
      border-radius: 6px 6px 0 0;
      padding: 15px;
      font-size: 24px;
      line-height: 24px;
      color: #fff;
      background: $offset-color;
      margin-bottom: 30px;
      border-top: 0;
      img {
        display: block;
        margin: auto;
        margin-bottom: 0.5em
      }
    }
    li > strong {
      color: #e74c3c;
    }
    li.plan-action {
      margin-top: 10px;
      border-top: 0;
    }
  }

  .plan.featured {
    -webkit-transform: scale(1.1);
    -ms-transform: scale(1.1);
    transform: scale(1.1);
  }
  .plan:hover li.plan-name {
    background: #c0392b;
  }
}

/* centered columns styles */
.row-centered {
    text-align:center;
}
.col-centered {
    display:inline-block;
    float:none;
    /* reset the text-align */
    text-align:left;
    /* inline-block space fix */
    margin-right:-4px;
}

.plan-questions {
  margin-top: 6em;
  padding-top: 2em;
  padding-bottom: 2em;
  background-color: #b1d05f;
}

.one-time-contribution {
  text-align: center;
}

.supporter-plan {
  color: white;
  font-size: 1.3em;
}

